src/objects/DM_Material__c.object
<CustomObject>
    <description>Case: Track the Material used by DM Request</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_del__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;资料相关品牌&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>DM Material</relationshipLabel>
        <relationshipName>DM_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Material_External_Id__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  
Function: 
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <externalId>true</externalId>
        <label>DM Material External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecreaseStockAmount__c</fullName>
        <description>/* 
Created by: Chris.Huang 
Used by: Chris.Huang 
Function: Summary DM Stock Flow Quanlity where Type equals &apos;Decrease Stock&apos;. 
Used in: Formular 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>DecreaseStockAmount</label>
        <summarizedField>DM_Stock_Flow__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Stock_Type__c</field>
            <operation>equals</operation>
            <value>Decrease Stock</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DM_Stock_Flow__c.Material_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;资料英文名称&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>English Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncreaseStockAmount__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: Summary DM Stock Flow Quanlity where Type equals &apos;Increase Stock&apos;.
Used in: Formular 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>IncreaseStockAmount</label>
        <summarizedField>DM_Stock_Flow__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Stock_Type__c</field>
            <operation>equals</operation>
            <value>Increase Stock</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DM_Stock_Flow__c.Material_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;备注&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SentTotal__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: When DM Request Status changed to &apos;Sent&apos;, this field auto add 1.
Used in: Trigger, Formular

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Sent Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;资料相关车系&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Series</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>迈巴赫</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>卡车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>克莱斯勒</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三菱</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>北京吉普</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>其它</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>奔驰商务车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Alert__c</fullName>
        <formula>IF( Threshold__c &lt;= Stock__c ,&quot;&quot;,IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;&quot;))</formula>
        <label>Stock Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <formula>IncreaseStockAmount__c - DecreaseStockAmount__c  -  SentTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Range Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart brochure_6months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010 E Promotion Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart welcome package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart brochure_3months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart brochure_12months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG White Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Puzzle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart welcome pack (USB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Class presale flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG White Book 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010 S-Class trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011 Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G500 canvas bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First flight Gift Set (P coupon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benz postcards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart 2nd anniversary presale flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart ways of city life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The 14th Shanghai international automobile exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS pre-sales flyer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DM Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock_Alert__c</columns>
        <columns>Type__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Threshold__c</columns>
        <columns>Stock__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DM Materials</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Low_Stock_Material</fullName>
        <columns>NAME</columns>
        <columns>Stock_Alert__c</columns>
        <columns>Type__c</columns>
        <columns>Brand_del__c</columns>
        <columns>Threshold__c</columns>
        <columns>Stock__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Alert__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Low Stock DM Materials</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Material</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Format_DM_Material_Name</fullName>
        <active>false</active>
        <description>Make sure DM Material Name input conversion: Brand-Series-Type.</description>
        <errorConditionFormula>NOT(REGEX( Name , &quot;.*-.*-.*&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Must input conversion: Brand-Series-Type.</errorMessage>
    </validationRules>
</CustomObject>